err/pyntifex.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyntifex-0.0.14.egg-info'...
Compiling './lib/python3.5/site-packages/formatter.py'...
***   File "./lib/python3.5/site-packages/formatter.py", line 50
    print iformat.format(sys.argv[4])
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/password.py'...
***   File "./lib/python3.5/site-packages/password.py", line 26
    print 'Preparing pool [ 0.0%',
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Compiling './lib/python3.5/site-packages/pyrand.py'...
***   File "./lib/python3.5/site-packages/pyrand.py", line 54
    print '\nurandom Output:'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/solitaire.py'...
***   File "./lib/python3.5/site-packages/solitaire.py", line 26
    print inString
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vtableau.py'...
***   File "./lib/python3.5/site-packages/vtableau.py", line 37
    print '\n(EE): Invalid character not in alphabet found in input:','\''+ii+'\''
                                                                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
